--- a/src/app/admin/account-management/new-transaction/new-purchase/new-purchase.component.html
+++ b/src/app/admin/account-management/new-transaction/new-purchase/new-purchase.component.html
@@ -230,10 +230,7 @@
                           {{ transact.totalHandler.itemPriceTotal | currency :"":"" }}
                         </td>
                         <td>
-                          <span class="d-inline-block mr-5">
-                            &#8377;
-                          </span>
-                          {{ transact.totalHandler.itemQuantityTotal | currency :"":"" }}
+                          {{ transact.totalHandler.itemQuantityTotal }}
                         </td>
                         <td>
                           <span class="d-inline-block mr-5">
