--- a/src/app/admin/account-management/new-transaction/new-sales/new-sales.component.html
+++ b/src/app/admin/account-management/new-transaction/new-sales/new-sales.component.html
@@ -227,10 +227,7 @@
                           {{ _transact.totalHandler.itemPriceTotal|currency:"":"" }}
                         </td>
                         <td>
-                          <span class="d-inline-block mr-5">
-                            &#8377;
-                          </span>
-                          {{ _transact.totalHandler.itemQuantityTotal|currency:"":"" }}
+                          {{ _transact.totalHandler.itemQuantityTotal }}
                         </td>
                         <td>
                           <span class="d-inline-block mr-5">
