--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -16,10 +16,10 @@
                 <a href="javascript:;">{{editId?'Update Order': 'Add Order'}} </a>
             </div>
         </div>
-        <div class="tab_body pa-20">
+        <div class="tab_body">
             <router-outlet></router-outlet>
         </div>
-        
+
     </div>
 
 </div>
