--- a/src/app/admin/table-manager/table-manager.component.html
+++ b/src/app/admin/table-manager/table-manager.component.html
@@ -1,62 +1,22 @@
-<div class="page_header d-flex mb-4">
-    <h2 class="header_title">Tables</h2>
+<div class="accont_header_wrapping pa-25">
+    <h2 class="text-uppercase font-weight-500 mb-0 d-flex align-items-center justify-content-between">
+        Tables
+        <!-- <div>
+            <button mat-raised-button color="primary" routerLink="/admin/settings/company/update">Add New</button>
+        </div> -->
+    </h2>
 </div>
-
-<div [formGroup]="form">
-    <div class="table_selectWrapper mt-20 mb-15" formArrayName="tables">
-        <ng-container *ngFor="let item of tables['controls'];let ti=index;">
-            <div class="table_col" [class.reserved]="item.get('isReserved').value" [formGroupName]="ti">
-                <div class="row ew-130 mx-auto position-relative h-100 no-gutters">
-                    <span class="table_circle">
-                        {{ item.get('tableId').value }}
-                        <ng-container *ngIf="item.get('runningOrderIds').value.length > 1">
-                            <button class="ordersMenuBtn" mat-button [matMenuTriggerFor]="menu">{{item.get('runningOrderIds').value.length}}</button>
-                                <mat-menu #menu="matMenu">
-                                    <ng-container *ngFor="let order of item.get('runningOrderIds').value">
-                                        <button mat-menu-item (click)="gotoOrder(order)">{{order}}</button>
-                                    </ng-container>
-                                </mat-menu>
-                        </ng-container>
-                        <ng-container *ngIf="item.get('runningOrderIds').value.length == 1">
-                            <button class="ordersMenuBtn" mat-button (click)="gotoOrder(item.get('runningOrderIds').value[0])">1</button>
-                        </ng-container>
-                    </span>
-                    <ng-container formArrayName="chairs">
-                        <!-- <div class="table_innerBox col-auto order-1" *ngIf="item.get('chairs')['controls'].length > 0">
-                            <div class="table_seat_checkBox vertical" formGroupName="0">
-                                <input type="checkbox" formControlName="isSelected" [id]="0+'chair'+ti">
-                                <label [for]="0+'chair'+ti" [class.pointer-none]="item.get('chairs')['controls'][0].get('permission').value == 'blocked'"></label>
-                            </div>
-                        </div>
-                        <div class="table_innerBox col-auto order-3" *ngIf="item.get('chairs')['controls'].length > 1">
-                            <div class="table_seat_checkBox vertical" formGroupName="1">
-                                <input type="checkbox" formControlName="isSelected" [id]="1+'chair'+ti">
-                                <label [for]="1+'chair'+ti" [class.pointer-none]="item.get('chairs')['controls'][1].get('permission').value == 'blocked'"></label>
-                            </div>
-                        </div> -->
-                        <div class="table_innerBox col order-2">
-                            <div class="d-flex mx-1 w-100">
-                                <ng-container *ngFor="let chair of item.get('chairs')['controls'];let ci = index;">
-                                    <ng-container *ngIf="ci%2 == 0">
-                                        <div class="radio_outer px-1">
-                                            <div class="table_seat_checkBox horizontal" [formGroupName]="ci">
-                                                <input type="checkbox" [id]="ci+'chair'+ti" formControlName="isSelected">
-                                                <label [for]="ci+'chair'+ti" [class.pointer-none]="item.get('chairs')['controls'][ci].get('permission').value == 'blocked'"></label>
-                                            </div>
-                                            <ng-container *ngIf="item.get('chairs')['controls'].length > (ci+1)">
-                                                <div class="table_seat_checkBox horizontal" [formGroupName]="ci + 1">
-                                                    <input type="checkbox" [id]="ci+1+'chair'+ti" formControlName="isSelected">
-                                                    <label [for]="ci+1+'chair'+ti" [class.pointer-none]="item.get('chairs')['controls'][ci+1].get('permission').value == 'blocked'"></label>
-                                                </div>
-                                            </ng-container>
-                                        </div>
-                                    </ng-container>
-                                </ng-container>
-                            </div>
-                        </div>
-                    </ng-container>
-                </div>
+<div class="account_body_wrapper">
+    <div class="body_inner_card">
+        <div class="tab_header">
+            <div class="tab_btn" routerLink="/admin/tables" routerLinkActive="active">
+                <a href="javascript:;">Table Lists</a>
             </div>
-        </ng-container>
+        </div>
+        <div class="tab_body pa-20">
+            <router-outlet></router-outlet>
+        </div>
+
     </div>
+
 </div>
