--- a/src/app/admin/account-management/transaction-history/transaction-history.component.html
+++ b/src/app/admin/account-management/transaction-history/transaction-history.component.html
@@ -28,6 +28,48 @@
             </div>
         </div>
         <div class="tab_body pa-20">
+          <form [formGroup]="filterForm" (submit)="getTransactions()">
+
+            <div class="row">
+
+            <div class="col-auto">
+                <mat-form-field appearance="outline" class="w-100 pb-0">
+                    <mat-label>Search</mat-label>
+                    <input matInput placeholder="Placeholder" formControlName="searchString">
+                    <button matSuffix mat-icon-button type="submit">
+                      <mat-icon>search</mat-icon>
+                    </button>
+                </mat-form-field>
+            </div>
+              <div class="col-auto">
+                  <mat-form-field appearance="fill">
+                      <mat-label>Account Type</mat-label>
+                      <mat-select formControlName="accountType" (selectionChange)="getTransactions()">
+                          <mat-option></mat-option>
+                          <mat-option *ngFor="let item of accountTypeList;" [value]="item">
+                              {{ item }}
+                          </mat-option>
+                      </mat-select>
+                  </mat-form-field>
+              </div>
+              <div class="col-auto" [hidden]="userData?.roles != 'Super Admin'">
+                  <mat-form-field appearance="fill">
+                      <mat-label>Company</mat-label>
+                      <mat-select required formControlName="selectedCompany">
+                          <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
+                      </mat-select>
+                  </mat-form-field>
+              </div>
+              <div class="col-auto" [hidden]="userData?.roles != 'Super Admin' && userData?.roles != 'Company Admin'">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Branch</mat-label>
+                        <mat-select required formControlName="selectedBranch" (selectionChange)="getTransactions()">
+                            <mat-option *ngFor="let item of branchList" [value]="item.id">{{ item.branchTitle }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+          </form>
             <div class="item_table_outer mt-10">
                 <div class="table-responsive">
                     <table class="table account_table" matSort>
@@ -39,8 +81,6 @@
                                 <th class="" mat-sort-header="transactionType">Type</th>
                                 <th class="ew-200">Amount</th>
                                 <th class="">Description</th>
-                                <th class="ew-150">Company</th>
-                                <th class="ew-150">Branch</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -68,14 +108,6 @@
                                     <td>
                                         <ng-container *ngIf="item.description else noData">
                                             {{ item.description }}
-                                        </ng-container>
-                                    </td>
-                                    <td>
-                                        {{ item.company?.companyName }}
-                                    </td>
-                                    <td>
-                                        <ng-container *ngIf="item.branch else noData">
-                                            {{ item.branch?.branchTitle }}
                                         </ng-container>
                                     </td>
                                 </tr>
