--- a/src/app/admin/orders/components/order-lists/order-lists.component.html
+++ b/src/app/admin/orders/components/order-lists/order-lists.component.html
@@ -1,17 +1,33 @@
 
-<form [formGroup]="filterForm" class="pt-20">
+<form [formGroup]="filterForm" class="pt-20" (submit)="getOrderList()">
     <div class="search_outerWrapper text-right mb-20">
         <div class="row gutters-10 justify-content-lg-end">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                <mat-form-field appearance="outline" class="w-100 pb-0">
+            <div class="col-auto" [hidden]="userData?.roles != 'Super Admin'">
+                <mat-form-field appearance="fill">
+                    <mat-label>Company</mat-label>
+                    <mat-select required formControlName="selectedCompany">
+                        <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-auto" [hidden]="userData?.roles != 'Super Admin' && userData?.roles != 'Company Admin'">
+                  <mat-form-field appearance="fill">
+                      <mat-label>Branch</mat-label>
+                      <mat-select required formControlName="selectedBranch" (selectionChange)="getOrderList()">
+                          <mat-option *ngFor="let item of branchList" [value]="item.id">{{ item.branchTitle }}</mat-option>
+                      </mat-select>
+                  </mat-form-field>
+              </div>
+            <div class="col-md-auto col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="pb-10">
                     <mat-label>Status</mat-label>
                     <mat-select formControlName="orderStatus" multiple>
                         <mat-option *ngFor="let item of orderStatus" [value]="item">{{ item|titlecase }}</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                <mat-form-field appearance="outline" class="w-100 pb-0">
+            <div class="col-md-auto col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="w-100 pb-10">
                     <mat-label>Date range</mat-label>
                     <mat-date-range-input [rangePicker]="picker">
                         <input matStartDate placeholder="Start date" formControlName="startDate">
@@ -21,11 +37,13 @@
                     <mat-date-range-picker #picker></mat-date-range-picker>
                 </mat-form-field>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                <mat-form-field appearance="outline" class="w-100 pb-0">
+            <div class="col-md-auto col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="pb-10">
                     <mat-label>Search</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="searchString">
-                    <mat-icon matSuffix>search</mat-icon>
+                    <button type="submit" matSuffix mat-icon-button>
+                      <mat-icon matSuffix>search</mat-icon>
+                    </button>
                 </mat-form-field>
             </div>
         </div>
@@ -36,7 +54,7 @@
         <table class="table account_table" matSort>
             <thead>
                 <tr>
-                    <th *ngIf="loginUserDetail?.roles == 'Super Admin' || loginUserDetail?.roles == 'Company Admin' || loginUserDetail?.roles == 'Branch Admin' || loginUserDetail?.roles == 'Company Accountant'"></th>
+                    <th *ngIf="userData?.roles == 'Super Admin' || userData?.roles == 'Company Admin' || userData?.roles == 'Branch Admin' || userData?.roles == 'Company Accountant'"></th>
                     <th class="ew-100">Action</th>
                     <th mat-sort-header="id" class="ew-150">No.</th>
                     <th mat-sort-header="bearer">Bearer</th>
@@ -49,7 +67,7 @@
             <tbody>
                 <ng-container *ngFor="let item of dataSource?.data; let i =index">
                     <tr [ngClass]="{'highlight': (item.orderStatus == 'new' && (item.rejectedCount > 0 || (item.timeDif.h * 60 + item.timeDif.i) > 20))}" [class.completedRow]="item.orderStatus == 'completed'" [class.canceledRow]="item.orderStatus == 'cancelled'">
-                        <td *ngIf="loginUserDetail?.roles == 'Super Admin' || loginUserDetail?.roles == 'Company Admin' || loginUserDetail?.roles == 'Branch Admin' || loginUserDetail?.roles == 'Company Accountant'">
+                        <td *ngIf="userData?.roles == 'Super Admin' || userData?.roles == 'Company Admin' || userData?.roles == 'Branch Admin' || userData?.roles == 'Company Accountant'">
                             <mat-checkbox [(ngModel)]="item.isSelected"></mat-checkbox>
                         </td>
                         <td>
