--- a/src/app/admin/report-manager/item-sale-report/item-sale-report.component.html
+++ b/src/app/admin/report-manager/item-sale-report/item-sale-report.component.html
@@ -1,5 +1,21 @@
 <div class="search_outerWrapper"  [formGroup]="filterForm">
     <div class="row gutters-10 justify-content-end">
+          <div class="col-auto" [hidden]="userData?.roles != 'Super Admin'">
+              <mat-form-field appearance="fill">
+                  <mat-label>Company</mat-label>
+                  <mat-select required formControlName="selectedCompany">
+                      <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
+          <div class="col-auto" [hidden]="userData?.roles != 'Super Admin' && userData?.roles != 'Company Admin'">
+                <mat-form-field appearance="fill">
+                    <mat-label>Branch</mat-label>
+                    <mat-select required formControlName="selectedBranch">
+                        <mat-option *ngFor="let item of branchList" [value]="item.id">{{ item.branchTitle }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+          </div>
         <div class="col-xl-2 col-md-4 col-sm-6 col-12">
             <mat-form-field appearance="outline" class="w-100 pb-0">
                 <mat-label>Search</mat-label>
