--- a/src/app/admin/report-manager/order-report/order-report.component.html
+++ b/src/app/admin/report-manager/order-report/order-report.component.html
@@ -1,20 +1,40 @@
 <div class="search_outerWrapper"  [formGroup]="filterForm">
-    <div class="row gutters-10">
-        <div class="col-12 text-right pb-4">
+    <div class="row gutters-10 justify-content-end">
+
+      <div class="row gutters-10 justify-content-lg-end">
+          <div class="col-auto" [hidden]="userData?.roles != 'Super Admin'">
+              <mat-form-field appearance="fill">
+                  <mat-label>Company</mat-label>
+                  <mat-select formControlName="company_id">
+                      <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
+          <div class="col-auto" [hidden]="userData?.roles != 'Super Admin' && userData?.roles != 'Company Admin'">
+                <mat-form-field appearance="fill">
+                    <mat-label>Branch</mat-label>
+                    <mat-select formControlName="branch_id" (selectionChange)="getBranchDetail()">
+                        <mat-option *ngFor="let item of branchList" [value]="item.id">{{ item.branchTitle }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+          </div>
+        <div class="col-12 col-lg-auto text-right pb-4">
             <button mat-raised-button class="mr-10" type="button" (click)="getOrderList($event)" color="primary">Generate</button>
             <button mat-mini-fab color="primary" type="button" class="ml-auto" (click)="exportToExcel()">
                 <img src="assets/images/icons/DOWNLOAD.svg" alt="" class="icon_img">
             </button>
         </div>
-        <div class="col-xl-2 col-md-4 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100">
+    </div>
+    <div class="row gutters-10 justify-content-end">
+        <div class="col-12 col-lg-auto">
+            <mat-form-field appearance="outline">
                 <mat-label>Search</mat-label>
                 <input matInput placeholder="Placeholder" formControlName="searchString">
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
         </div>
-        <div class="col-xl-2 col-md-4 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100">
+        <div class="col-12 col-lg-auto">
+            <mat-form-field appearance="outline">
                 <mat-label>Date range</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
                     <input matStartDate placeholder="Start date" formControlName="startDate">
@@ -24,26 +44,16 @@
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
         </div>
-        <div class="col-xl-2 col-md-3 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100">
+        <div class="col-12 col-lg-auto">
+            <mat-form-field appearance="outline">
                 <mat-label>Status</mat-label>
                 <mat-select formControlName="orderStatus" multiple>
                     <mat-option *ngFor="let item of orderStatus" [value]="item">{{ item|titlecase }}</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
-
-        <div class="col-xl-2 col-md-3 col-sm-6 col-12" *ngIf="userData?.roles == 'Super Admin'">
-            <mat-form-field appearance="outline" class="w-100 mr-10">
-                <mat-label>Branch</mat-label>
-                <mat-select matNativeControl formControlName="branch_id"
-                    (selectionChange)="getBranchDetail(filterForm.get('branch_id').value)">
-                    <mat-option *ngFor="let item of branchList;" [value]="item.id">{{ item.branchTitle }}</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-        <div class="col-xl-2 col-md-3 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100">
+        <div class="col-12 col-lg-auto">
+            <mat-form-field appearance="outline">
                 <mat-label>Order Type</mat-label>
                 <mat-select formControlName="typeOfOrder" multiple>
                     <ng-container *ngFor="let item of orderTypeList;">
@@ -52,8 +62,8 @@
                 </mat-select>
             </mat-form-field>
         </div>
-        <div class="col-xl-2 col-md-3 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100">
+        <div class="col-12 col-lg-auto">
+            <mat-form-field appearance="outline">
                 <mat-label>Payment Method</mat-label>
                 <mat-select formControlName="paymentMethod" multiple>
                     <ng-container *ngFor="let item of paymentMethodList;">
@@ -62,7 +72,7 @@
                 </mat-select>
             </mat-form-field>
         </div>
-        
+
 
     </div>
 </div>
