--- a/src/app/admin/report-manager/item-sale-report/item-sale-report.component.html
+++ b/src/app/admin/report-manager/item-sale-report/item-sale-report.component.html
@@ -16,15 +16,15 @@
                     </mat-select>
                 </mat-form-field>
           </div>
-        <div class="col-xl-2 col-md-4 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
+        <div class="col-auto">
+            <mat-form-field appearance="outline" class="pb-0">
                 <mat-label>Search</mat-label>
                 <input matInput placeholder="Placeholder" formControlName="searchString">
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
         </div>
-        <div class="col-xl-2 col-md-4 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
+        <div class="col-auto">
+            <mat-form-field appearance="outline" class="pb-0">
                 <mat-label>Date range</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
                     <input matStartDate placeholder="Start date" formControlName="startDate">
@@ -34,7 +34,7 @@
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
         </div>
-        <div class="col-xl-auto col-md-2 col-sm-6 col-12">
+        <div class="col-auto">
             <button mat-raised-button class="mr-10" type="button" (click)="getOrderItemSalesList($event)" color="primary">Generate</button>
             <button mat-mini-fab color="primary" type="button" class="ml-auto" (click)="exportToExcel()">
                 <img src="assets/images/icons/DOWNLOAD.svg" alt="" class="icon_img">
