--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -1,10 +1,41 @@
+<div class="search_outerWrapper text-right mb-20">
+    <form [formGroup]="filterForm" (submit)="getAllUsers()">
+      <div class="row gutters-10 justify-content-lg-end">
+          <div class="col-auto" [hidden]="userData?.roles != 'Super Admin'">
+              <mat-form-field appearance="fill">
+                  <mat-label>Company</mat-label>
+                  <mat-select required formControlName="selectedCompany">
+                      <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
+          <div class="col-auto" [hidden]="userData?.roles != 'Super Admin' && userData?.roles != 'Company Admin'">
+                <mat-form-field appearance="fill">
+                    <mat-label>Branch</mat-label>
+                    <mat-select required formControlName="selectedBranch" (selectionChange)="getAllUsers()">
+                        <mat-option *ngFor="let item of branchList" [value]="item.id">{{ item.branchTitle }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+        <div class="col-auto">
 
+          <mat-form-field  appearance="outline" class="ew-250 pb-0">
+              <mat-label>Search</mat-label>
+              <input formControlName="searchString" type="text" matInput>
+              <button matSuffix type="submit" mat-icon-button>
+                <mat-icon >search</mat-icon>
+              </button>
+          </mat-form-field>
+        </div>
+      </div>
+    </form>
+</div>
 <div class="item_table_outer mt-10">
     <div class="table-responsive">
         <table class="table account_table" matSort>
             <thead>
                 <tr>
-                    <th class="ew-100"  *ngIf=" this._serv.getPermission('users', 'full')">Action</th>
+                    <th class="ew-100"  *ngIf=" this.serv.getPermission('users', 'full')">Action</th>
                     <th mat-sort-header="firstName" class="ew-200">User Name</th>
                     <th mat-sort-header="roles" class="ew-200">Role</th>
                     <th mat-sort-header="company" [hidden]="userData?.roles != 'Super Admin'">Company</th>
@@ -17,7 +48,7 @@
             <tbody>
                 <ng-container *ngFor="let item of dataSource?.data; let i =index">
                     <tr *ngIf="userData?.user_id != item.id">
-                        <td  *ngIf=" this._serv.getPermission('users', 'full')">
+                        <td  *ngIf=" this.serv.getPermission('users', 'full')">
                             <button mat-icon-button [matMenuTriggerFor]="moreOption">
                                 <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                             </button>
